# casita-assistant

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build-riscv.yml
apps/menubar/: Package.swift
apps/menubar/Sources/CasitaAssistantMenu/: main.swift
crates/automation-engine/: Cargo.toml
crates/automation-engine/src/: engine.rs  error.rs  evaluator.rs  executor.rs  lib.rs  model.rs  persistence.rs  scheduler.rs
crates/casita-assistant-api/: Cargo.toml
crates/casita-assistant-api/src/: camera.rs  main.rs  rtsp.rs  static_files.rs  websocket.rs
crates/deconz-protocol/: Cargo.toml
crates/deconz-protocol/src/: commands.rs  frame.rs  lib.rs  slip.rs  transport.rs  types.rs
crates/zigbee-core/: Cargo.toml
crates/zigbee-core/src/: cluster.rs  device.rs  lib.rs  network.rs  persistence.rs
frontend/: .env.example  package-lock.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/components/: AutomationsView.svelte  CamerasView.svelte  DevicesView.svelte  Pane.svelte  StatusView.svelte  VideoPlayer.svelte
frontend/src/lib/: api.ts  types.ts  websocket.ts
frontend/src/lib/stores/: index.ts
webapp/: index.html
webapp/css/: style.css
webapp/js/: api.js  app.js  websocket.js
