[package]
name = "casita-assistant-api"
version.workspace = true
edition.workspace = true

[dependencies]
deconz-protocol = { workspace = true }
zigbee-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
futures = "0.3"
