[package]
name = "casita-assistant-api"
version.workspace = true
edition.workspace = true

[dependencies]
deconz-protocol = { workspace = true }
zigbee-core = { workspace = true }
automation-engine = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
tokio-util = { version = "0.7", features = ["io"] }
async-stream = "0.3"
bytes = "1"
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

# Native RTSP support (replaces ffmpeg dependency)
retina = "0.4"
url = "2"

[features]
default = ["embed-frontend"]
embed-frontend = []
