[package]
name = "deconz-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serial2 = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
